--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 .bg{
-    background:linear-gradient(rgba(113, 105, 151, 0.476),rgba(230, 164, 164, 0.659)), url("../images/sunset.jpg");
+    background:linear-gradient(rgba(113, 105, 151, 0.476),rgba(230, 164, 164, 0.659)), url("./images/sunset.jpg");
     height: 100%;
     background-position: center;
     background-size: cover;
