--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 .bg{
     background:linear-gradient(rgba(113, 105, 151, 0.476),rgba(230, 164, 164, 0.659)), url("./images/sunset.jpg");
-    height: 100%;
+    height: 100vh;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
